slider error on mobile, not fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,6 +117,7 @@ header {
 .hero-section {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .hero-section__left {
   width: 55%;
@@ -154,18 +155,33 @@ header {
 }
 .highlight-works {
   position: relative;
-  height: 35vh;
+  /* height: 45vh; */
   overflow: hidden;
   cursor: grab;
-  margin: 100px 0 50px 0;
+  margin-top: 100px;
 }
 .slider-wrap {
-  position: absolute;
+  /* position: absolute;
   top: 50;
   left: 0;
   display: flex;
   justify-content: space-between;
-  pointer-events: none;
+  pointer-events: none; */
+
+  height: 100vh;
+  display: inline-flex;
+  overflow: hidden;
+  scrollbar-width: none;
+  transform: translateX(0);
+  cursor: grab;
+}
+.item {
+  max-height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
 }
 .item img {
   height: 25vh;
@@ -356,11 +372,5 @@ header {
 /* WORKS-PAGE ------------------------------------------ */
 
 /* DETAIL-PAGE ------------------------------------------ */
-
-
-
-
-
-
 
 /* DETAIL-PAGE ------------------------------------------ */
